--------------------------------------------------------------------------
---------                Ampache -- CHANGELOG                    ---------   
--------------------------------------------------------------------------

--------------------------------------------------------------------------
  v.3.4-Alpha4 
	- Fixed it so that all errors should return an XML document when
		using the XML API. 
	- Added Basic ShoutBox functionality, needs formating fixes
		and needs to be moved to a better spot in classic theme it
		must be turned on in the /config/ampache.cfg.php
	- Fixed Mail functions, some features from old mail are missing for
		now. 
	- Fixed Delete Disabled & Sort Files command line scripts
	- Fixed Find Duplicates Functionality
	- Added Highest Rated option to Advanced Random
	- Fixed incorrect mime type being set on ASX playlists
	- Fixed problem where you couldn't change playlist type 
		(Thx Karl Hungus) 
	- Fixed potential issue with display on some preferences
	- Added Length to Advanced Random and removed Minutes from methods 
	- Added function exists check for session with redirect to /test.php
		on failure
	- Fixed incorrect extension and stream command being sent when using
		transcode for type other then mp3
	- Fixed default flac downsample command, removed -r as flac decode
		appears to not be raw pcm
	- Fixed download filename to match the catalog filename pattern
	- Added downloads back to stats tracking 
	- Fixed disable/re-enable of users
	- Fixed a bug where ajax actions wouldn't trigger a redirect to login
		when session expired, instead they would just break
	- Fixed a bug with Random Play if you had no artists/albums/playlists
	- Fixed Admin's ability to modify other users preferences
	- Added User and Manager levels to Localplay, determines what the
		user in question can do
	- Moved Newest * to statistics page
	- Database Update, removed useless config options and tweaked a few others