@@ -43,12 +43,14 @@
 	<td><?php echo _('Start IP Address'); ?>:</td>
 	<td>
 		<input type="text" name="start" value="<?php echo int2ip($access->start); ?>" size="20" maxlength="15" />
+		<span class="information">(0.0.0.0)</span>
 	</td>
 </tr>
 <tr>
 	<td><?php echo _('End IP Address'); ?>:</td>
 	<td>
 		<input type="text" name="end" value="<?php echo int2ip($access->end); ?>" size="20" maxlength="15" />
+		<span class="information">(0.0.0.0)</span>
 	</td>
 </tr>
 <tr>
@@ -57,14 +59,12 @@
 		<?php show_user_select('user',$access->user); ?>
 	</td>
 </tr>
-<?php if ($access->type == 'rpc') { ?>
 <tr>
 	<td><?php echo _('Remote Key'); ?></td>
 	<td>
 		<input type="text" name="key" value="<?php echo scrub_out($access->key); ?>" size="32" maxlength="32" />
 	</td>
 </tr>
-<?php } ?>
 </tr>
 <tr>
 	<td><?php echo _('Level'); ?>:</td>
